# fugw-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/fugw_simulator/: callbacks.py  generate_figures.py  simulator.py  utils.py
