[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fugw-simulator"
authors = [
  {name = "Pierre-Louis Barbarant", email = "plbarbarant@gmail.com"},
]
description = "A data simulation tool for FUGW"
readme = "README.md"
keywords = ["optimal transport", "fugw", "visualization", "simulation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "joblib>=1.2.0",
  "fugw",
  "matplotlib",
  "nibabel",
  "nilearn[plotly]",
  "numpy<2",
  "pandas",
  "rich>=13.3.1",
  "scikit-learn",
  "scipy",
  "torch>=1.13",
  "tvb-gdist>=2.1.1",
  "tqdm",
  "imageio",
]

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
  "pytest-mypy-plugins",
  "mypy",
  "npt-promote",
]
test = [
  "flake8",
  "nilearn",
  "pyproject-flake8",
  "pytest>=7.2",
]

[project.urls]
repository = "https://github.com/pbarbarant/fugw-simulator.git"

[tool.black]
line-length = 79
preview = true

[tool.flake8]
ignore = ["E203", "W503"]

[tool.mypy]
# Specify the files and directories to type check
files = ["src/fugw_simulator", "tests"]
pretty = true
plugins = [
  "numpy.typing.mypy_plugin",
  'npt_promote',
]

# Set the Python version
python_version = "3.11"

# Specify the strictness of type checking
strict = true

# Ignore missing imports
ignore_missing_imports = true

# Enable incremental mode
incremental = true

# Show error codes
show_error_codes = true

[tool.setuptools.dynamic]
version = {attr = "fugw_simulator.__version__"}